waiting on stack overflow response about issue rendering assets

--- a/src/index.css
+++ b/src/index.css
@@ -68,7 +68,3 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
-
-img{
-  
-}
